--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,14 @@
 <footer class="footer">
-	<div class="container">
-		<ul class="text-muted nav navbar-nav navbar-left">
-			<li><%= link_to "Ruby on Rails Tutorial by Michael Hartl", '#', class: "nounderline"%></li>
-		</ul>
-		<ul class="text-muted nav navbar-nav navbar-right">
-			<li><%= link_to "About", '#', class: "nounderline"%></li>
-			<li><%= link_to "Contact", '#', class: "nounderline"%></li>
-			<li><%= link_to "News", '#', class: "nounderline"%></li>
-		</ul>
-	</div>
+
+	<ul class="text-muted nav navbar-nav navbar-left">
+		<li><%= link_to "Ruby on Rails Tutorial by Michael Hartl", '#', class: "nounderline"%></li>
+	</ul>
+	<ul class="text-muted nav navbar-nav navbar-right">
+		<li><%= link_to "About", about_path, class: "nounderline"%></li>
+		<li><%= link_to "Contact", contact_path, class: "nounderline"%></li>
+		<li><%= link_to "News", '#', class: "nounderline"%></li>
+	</ul>
+
 
 
 </footer>
