--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-	<%= render 'layouts/header' %>
+  <%= render 'layouts/header' %>
+  <div class="container">
+    <%= yield %>
 
-	<%= yield %>
-
-	<%= render 'layouts/footer' %>
-
+    <%= render 'layouts/footer' %>
+  </div>
 </body>
 </html>
