added the signup page and links to it

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,9 +1,11 @@
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 a.nounderline {
   text-decoration: none;
   
 }
 
-$gray-light: #777;
 
 /* universal */
 
