--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
 	<ul class="text-muted nav navbar-nav navbar-right">
 		<li><%= link_to "About", about_path, class: "nounderline"%></li>
 		<li><%= link_to "Contact", contact_path, class: "nounderline"%></li>
-		<li><%= link_to "News", '#', class: "nounderline"%></li>
+		<li><%= link_to "News", "http://news.railstutorial.org/", class: "nounderline"%></li>
 	</ul>
 
 
