--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -3,7 +3,7 @@
 
 a.nounderline {
   text-decoration: none;
-  
+
 }
 
 
@@ -31,6 +31,9 @@ a.nounderline {
 
 /* typography */
 
+  a.white:visited {
+    color: #fff
+  }
   h1, h2, h3, h4, h5, h6 {
     line-height: 1;
   }
