--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,12 @@
 <% provide(:title, "Home") %>
 
 <div class="text-center jumbotron">
-	<h1>Welcome to the Sample App</h1>
-	<p class="lead">This is the home page for the 
-		<a href = "https://www.railstutorial.org/", class="nounderline">Ruby on Rails Tutorial</a> 
-		sample application.
-	</p>
-	<button type="button" class=" btn btn-primary">
-		Sign up now!
-	</button>
+  <h1>Welcome to the Sample App</h1>
+  <p class="lead">This is the home page for the
+    <a href = "https://www.railstutorial.org/", class="nounderline">Ruby on Rails Tutorial</a>
+    sample application.
+  </p>
+   <%= link_to "Sign up now!", signup_path, type: "button", class: "white btn btn-lg btn-primary nounderline" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org' %>
