Finished user signup

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -6,29 +6,6 @@ a.nounderline {
 
 }
 
-
-/* universal */
-
-  /*body {
-    padding-top: 60px;
-  }
-  section {
-    overflow: auto;
-  }
-
-  textarea {
-    resize: vertical;
-  }
-
-  .center {
-    text-align: center;
-  }
-
-  .center h1 {
-    margin-bottom: 10px;
-  }
-*/
-
 /* typography */
 
   a.white:visited {
@@ -76,34 +53,39 @@ a.nounderline {
     }
   }
 
-/* footer */
 
-/*  footer {
-    margin-top: 45px;
-    padding-top: 5px;
-    border-top: 1px solid #eaeaea;
-    color: $gray-light;
+  /*debug*/
+
+  pre.debug_dump{
+    padding-bottom:20px;
+    margin-bottom:30px;
+    color:inherit;
+    background-color:#eee;
+
   }
 
-  footer a {
-    color: #555;
-    &:hover {
-      color: #222;
-    }
+  .suform{
+    width: 100%
   }
 
-
-  footer small {
-    float: left;
+  .rowsep{
+    margin-bottom: 30px;
   }
 
-  footer ul {
-    float: right;
-    list-style: none;
-    li {
-      float: left;
-      margin-left: 15px;
-    }
+  pre.debug_dump{
+    padding-bottom:20px;
+    margin-bottom:30px;
+    color:inherit;
+    background-color:#eee;
   }
 
-  */
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
+
+.errlist{
+  color: red;
+}
