--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,10 +3,22 @@
     <div class="navbar-header">
       <%= link_to 'Sample App', root_path, class: "navbar-brand nounderline", id: "logo" %>
     </div>
-     <ul class="nav navbar-nav navbar-right">
-       <li><%= link_to 'Home', root_path, class: "nounderline" %></li>
-       <li><%= link_to 'Help', help_path, class: "nounderline"%></li>
-       <li><%= link_to 'About', about_path, class: "nounderline"%></li>
-     </ul>
+
+    <ul class="nav navbar-nav navbar-right">
+      <li><%= link_to 'Home', root_path, class: "nounderline" %></li>
+      <li><%= link_to 'Help', help_path, class: "nounderline"%></li>
+      <li><%= link_to 'About', about_path, class: "nounderline"%></li>
+      <% if logged_in? %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", user_path(@current_user) %></li>
+              <li><%= link_to "Settings", "#" %></li>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "Log out", logout_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to 'Log in', login_path, class: "nounderline"%></li>
+      <% end %>
+    </ul>
   </div>
 </nav>
